--- a/egov/egov-collectionweb/src/main/resources/messages/labels_en.properties
+++ b/egov/egov-collectionweb/src/main/resources/messages/labels_en.properties
@@ -60,48 +60,62 @@ lbl.onlinepayment.transid=Transaction ID
 lbl.online.payment.report.result= Online Payment Report Result
 
 title.dishonour.surrender.cheque=Dishonour Surrender Cheque
-title.dishonor.cheque.dd=title.dishonor.cheque.dd
-lbl.bank.branch=lbl.bank.branch
-lbl.bank.account=lbl.bank.account
-lbl.instrument.mode=lbl.instrument.mode
-lbl.cheque.dd.number=lbl.cheque.dd.number
-lbl.cheque.dd.date=lbl.cheque.dd.date
+title.dishonor.cheque.dd=Dishonor Cheque/DD
+lbl.bank.branch=Bank & Branch
+lbl.bank.account=Bank Account
+lbl.instrument.mode=Instrument Mode
+lbl.cheque.dd.number=Cheque/DD Number
+lbl.cheque.dd.date=Cheque/DD Date
 
-lbl.receipt.no=lbl.receipt.no
-lbl.receipt.date=lbl.receipt.date
-lbl.voucher.number=lbl.voucher.number
-lbl.cheque.dd.date=lbl.cheque.dd.date
-lbl.cheque.dd.number=lbl.cheque.dd.number
-lbl.cheque.dd.amount=lbl.cheque.dd.amount
-lbl.bank.name=lbl.bank.name
-lbl.bank.account.number=lbl.bank.account.number
-lbl.dishonor.cheque.dd.details=lbl.dishonor.cheque.dd.details
-lbl.transaction.date=lbl.transaction.date
-lbl.dishonor.reason=lbl.dishonor.reason
-lbl.remarks=lbl.remarks
-lbl.original.entry=lbl.original.entry
-lbl.account.code=lbl.account.code
-lbl.description=lbl.description
-lbl.debit.amount=lbl.debit.amount
-lbl.credit.amount=lbl.credit.amount
-lbl.reversal.entry=lbl.reversal.entry
-lbl.back=lbl.back
-lbl.process=lbl.process
+lbl.receipt.no=Receipt Number
+lbl.receipt.date=Receipt Date
+lbl.voucher.number=Voucher Number
+lbl.cheque.dd.date=Cheque/DD Date
+lbl.cheque.dd.number=Cheque/DD Number
+lbl.cheque.dd.amount=Cheque/DD Amount
+lbl.bank.name=Bank Name
+#lbl.bank.account.number=Account Number
+lbl.dishonor.cheque.dd.details=Dishonored Cheques/DD Details
+lbl.transaction.date=Transaction Date
+lbl.dishonor.reason=Dishonor Reason
+lbl.remarks=Remarks
+lbl.original.entry=Original Entry
+lbl.account.code=Account Code
+lbl.description=Description
+lbl.debit.amount=Debit Amount
+lbl.credit.amount=Credit Amount
+lbl.reversal.entry=Reversal Entry
+lbl.back=Back
+lbl.process=Process
 
-lbl.dishonoured.cheque.report=lbl.dishonoured.cheque.report
-lbl.bank.account.number=lbl.bank.account.number
-title.dishonoured.report=title.dishonoured.report
-lbl.receipt.number=lbl.receipt.number
-lbl.cheque.dd.date=lbl.cheque.dd.date
-lbl.deposited.bank.name=lbl.deposited.bank.name
-lbl.dishonoured.on.date=lbl.dishonoured.on.date
-lbls.select=lbls.select
-lbl.cheque.amount=lbl.cheque.amount
+lbl.dishonoured.cheque.report=Dishonored Cheque Report
+lbl.dihonouredchequefromdate=Cheque Dishonored From Date
+lbl.dihonouredchequetodate=Cheque Dishonored To Date
+lbl.bank.account.number=Bank & Account Number
+title.dishonoured.report=Dishonored Cheque Report
+lbl.rceipt.number=Receipt Number
+lbl.cheque.dd.date=Cheque/DD Date
+lbl.cheque.dd.number=Cheque/DD Number
+lbl.deposited.bank.name=Deposited in Bank Name
+lbl.dishonoured.on.date=Dishonored On Date
+lbl.service=Service
+lbl.payment.type=Payment Mode
+lbl.cheque.number=Cheque Number
+lbl.cheque.amount=Cheque Amount
+lbl.search=Search
+lbls.select=Select
 
 
-msg.please.select.instrument.mode=msg.please.select.instrument.mode
-msg.please.enter.cheque.dd.number=msg.please.enter.cheque.dd.number
-msg.cheque.dd.number.must.be.six.digit=msg.cheque.dd.number.must.be.six.digit
-msg.please.select.cheque.dd.date=msg.please.select.cheque.dd.date
-msg.fromDate.please.select=msg.fromDate.please.select
-msg.toDate.please.select=msg.toDate.please.select
+
+msg.please.select.payment.type=Please Select Payment Type
+msg.fromDate.must.be.lower.than.toDate=From Date must be lower than To Date
+msg.please.select.bank.account=Please Select Bank Account
+msg.please.select.instrument.mode=Please Select Instrument Mode
+msg.please.enter.cheque.dd.number=Please Enter Cheque/DD Number
+msg.cheque.dd.number.must.be.six.digit=Cheque/DD Number must be of 6 digits
+msg.please.select.cheque.dd.date=Please select Cheque/DD Date
+
+msg.please.select.fromDate=Please select Cheque Dishonored From Date
+msg.please.select.toDate=Please select Cheque Dishonored To Date
+
+
