Post Audit & Issue Fixes

--- a/egov/egov-auditweb/src/main/resources/messages/labels_hi.properties
+++ b/egov/egov-auditweb/src/main/resources/messages/labels_hi.properties
@@ -252,6 +252,7 @@ title.expensebill.create=Create Expense Bill
 lbl.expensebill=Expense Bill
 lbl.header=Header
 lbl.checklist=CheckList
+lbl.billDetails=Bill Details
 lbl.checklist.value=Check List Value
 lbl.checklist.name=Check List Name
 lbl.expense.bill.amount=Bill Amount
